force-app/main/default/objects/Lead/fields/AceptoComunAvintia__c.field-meta.xml
<CustomField>
    <fullName>AceptoComunAvintia__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo checkbox que acepta la comuniación de sus datos dentro de Avintia.</description>
    <label>Acepta comunicaciones comerciales</label>
    <type>Checkbox</type>
</CustomField>