force-app/main/default/objects/Lead/fields/AceptoComunTercEntidades__c.field-meta.xml
<CustomField>
    <fullName>AceptoComunTercEntidades__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que verifica la aceptación del uso de sus datos con terceras entidades.</description>
    <label>Acepta Comunicación terceras entidades</label>
    <type>Checkbox</type>
</CustomField>