force-app/main/default/objects/Lead/fields/Altura_de_vivienda_interes__c.field-meta.xml
<CustomField>
    <fullName>Altura_de_vivienda_interes__c</fullName>
    <label>Altura de vivienda interés</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Altura_vivienda</valueSetName>
    </valueSet>
</CustomField>