force-app/main/default/objects/Lead/fields/AlturaViviendaIntersFormHello__c.field-meta.xml
<CustomField>
    <fullName>AlturaViviendaIntersFormHello__c</fullName>
    <formula>IF (INCLUDES (Altura_de_vivienda_interes__c, &quot;Bajo&quot;) ,&quot;Bajo; &quot; , Null ) &amp;
IF (INCLUDES (Altura_de_vivienda_interes__c, &quot;Plantas intermedias&quot;) ,&quot;Plantas intermedias; &quot; , Null ) &amp;
IF (INCLUDES (Altura_de_vivienda_interes__c, &quot;Ático&quot;) ,&quot;Ático; &quot; , Null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Altura de vivienda de interés Hello</label>
    <type>Text</type>
</CustomField>