force-app/main/default/objects/Lead/fields/Apellidos_DocuSign__c.field-meta.xml
<CustomField>
    <fullName>Apellidos_DocuSign__c</fullName>
    <formula>LastName  &amp; &apos; &apos;  &amp;  Suffix</formula>
    <label>Apellidos DocuSign</label>
    <type>Text</type>
</CustomField>