force-app/main/default/objects/Lead/fields/CausaConcretaDescarte__c.field-meta.xml
<CustomField>
    <fullName>CausaConcretaDescarte__c</fullName>
    <label>Causa Concreta Descarte</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Motivo_de_descarte__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demasiado pronto</fullName>
            </value>
            <value>
                <fullName>Demasiado tarde</fullName>
            </value>
            <value>
                <fullName>Datos erróneos</fullName>
            </value>
            <value>
                <fullName>No responde</fullName>
            </value>
            <value>
                <fullName>Aplaza compra</fullName>
            </value>
            <value>
                <fullName>Desiste de la compra</fullName>
            </value>
            <value>
                <fullName>Competencia</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Financiación</fullName>
            </value>
            <value>
                <fullName>Forma de pago</fullName>
            </value>
            <value>
                <fullName>Calidades</fullName>
            </value>
            <value>
                <fullName>Distribución</fullName>
            </value>
            <value>
                <fullName>Fachada</fullName>
            </value>
            <value>
                <fullName>Imprescindible terraza</fullName>
            </value>
            <value>
                <fullName>Nº dormitorios</fullName>
            </value>
            <value>
                <fullName>Orientación</fullName>
            </value>
            <value>
                <fullName>Tamaño</fullName>
            </value>
            <value>
                <fullName>Tipología</fullName>
            </value>
            <value>
                <fullName>Zonas comunes</fullName>
            </value>
            <value>
                <fullName>Comunicaciones</fullName>
            </value>
            <value>
                <fullName>Falta de servicios</fullName>
            </value>
            <value>
                <fullName>Prestigio zona</fullName>
            </value>
            <value>
                <fullName>Obra nueva</fullName>
            </value>
            <value>
                <fullName>Segunda mano</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>