force-app/main/default/objects/Lead/fields/CNO__c.field-meta.xml
<CustomField>
    <fullName>CNO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CNO</label>
    <referenceTo>CNO__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>