force-app/main/default/objects/Lead/fields/Comercial_Asignado__c.field-meta.xml
<CustomField>
    <fullName>Comercial_Asignado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Comercial API de la promoción asignado al Lead</description>
    <label>Comercial Asignado</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>