force-app/main/default/objects/Lead/fields/Comunidad_autonoma__c.field-meta.xml
<CustomField>
    <fullName>Comunidad_autonoma__c</fullName>
    <formula>Localidad__r.Provincia__r.Comunidad_autonoma__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comunidad autónoma</label>
    <type>Text</type>
</CustomField>