force-app/main/default/objects/Lead/fields/Descripcion_motivo_de_descarte__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_motivo_de_descarte__c</fullName>
    <description>Campo para escribir comentarios cuando el motivo de descarte es Otros</description>
    <inlineHelpText>Descripción del motivo de descarte &quot;Otros&quot;</inlineHelpText>
    <label>Descripcion motivo de descarte</label>
    <type>TextArea</type>
</CustomField>