force-app/main/default/objects/Lead/fields/Email_Comercial_API__c.field-meta.xml
<CustomField>
    <fullName>Email_Comercial_API__c</fullName>
    <formula>Promocion__r.Comercial_API__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Comercial API</label>
    <type>Text</type>
</CustomField>