force-app/main/default/objects/Lead/fields/EmailAPIPromo__c.field-meta.xml
<CustomField>
    <fullName>EmailAPIPromo__c</fullName>
    <formula>Owner:Queue.QueueEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EmailAPIPromo</label>
    <type>Text</type>
</CustomField>