force-app/main/default/objects/Lead/fields/EmailPromocion__c.field-meta.xml
<CustomField>
    <fullName>EmailPromocion__c</fullName>
    <description>Campo que guarda el email del candidato y la promoción a la que está asociado.</description>
    <externalId>true</externalId>
    <label>Email y Promoción</label>
    <length>255</length>
    <type>Text</type>
</CustomField>