force-app/main/default/objects/Lead/fields/Enlace_CNAEs__c.field-meta.xml
<CustomField>
    <fullName>Enlace_CNAEs__c</fullName>
    <description>Enlace a un documento con los CNAEs</description>
    <formula>HYPERLINK(&quot;https://grupoavintia.my.salesforce.com/sfc/p/f20000019ZCs/a/f20000000j8y/u0iKza8YOil.jF1CSRo1APCr8LpnUf22y_uDrzB1gLo&quot;, &quot;Enlace CNAEs&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Detalle de CNAEs</inlineHelpText>
    <label>Enlace CNAEs</label>
    <type>Text</type>
</CustomField>