force-app/main/default/objects/Lead/fields/Fecha_Visita__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Visita__c</fullName>
    <label>Fecha 1ª Visita</label>
    <type>Date</type>
</CustomField>