force-app/main/default/objects/Lead/fields/Hora_de_Creacion__c.field-meta.xml
<CustomField>
    <fullName>Hora_de_Creacion__c</fullName>
    <formula>TIMEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hora de Creación</label>
    <type>Time</type>
</CustomField>