force-app/main/default/objects/Lead/fields/ID18__c.field-meta.xml
<CustomField>
    <fullName>ID18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>ID18</label>
    <type>Text</type>
</CustomField>