force-app/main/default/objects/Lead/fields/Id_promocion_web_to_lead__c.field-meta.xml
<CustomField>
    <fullName>Id_promocion_web_to_lead__c</fullName>
    <label>Id promocion (web-to-lead)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>