force-app/main/default/objects/Lead/fields/Idioma_candidato__c.field-meta.xml
<CustomField>
    <fullName>Idioma_candidato__c</fullName>
    <label>Idioma candidato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Idioma</valueSetName>
    </valueSet>
</CustomField>