force-app/main/default/objects/Lead/fields/LastLeadStatus__c.field-meta.xml
<CustomField>
    <fullName>LastLeadStatus__c</fullName>
    <label>LastLeadStatus</label>
    <length>55</length>
    <type>Text</type>
</CustomField>