force-app/main/default/objects/Lead/fields/Link_Promocion__c.field-meta.xml
<CustomField>
    <fullName>Link_Promocion__c</fullName>
    <label>Link_Promocion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>