force-app/main/default/objects/Lead/fields/Localidad_Extranjera__c.field-meta.xml
<CustomField>
    <fullName>Localidad_Extranjera__c</fullName>
    <label>Localidad Extranjera</label>
    <length>150</length>
    <type>Text</type>
</CustomField>