force-app/main/default/objects/Lead/fields/LocalidadPardot__c.field-meta.xml
<CustomField>
    <fullName>LocalidadPardot__c</fullName>
    <formula>Localidad__r.Name</formula>
    <label>Localidad Pardot</label>
    <type>Text</type>
</CustomField>