force-app/main/default/objects/Lead/fields/Maximo_precio_de_interes__c.field-meta.xml
<CustomField>
    <fullName>Maximo_precio_de_interes__c</fullName>
    <label>Rango precio de interés</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Minimo_precio_interes</valueSetName>
    </valueSet>
</CustomField>