force-app/main/default/objects/Lead/fields/Medio_de_conocimiento__c.field-meta.xml
<CustomField>
    <fullName>Medio_de_conocimiento__c</fullName>
    <label>Origen de Lead</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <restricted>true</restricted>
        <valueSetName>Medio_de_conocimiento</valueSetName>
    </valueSet>
</CustomField>