force-app/main/default/objects/Lead/fields/Minimo_precio_inter_s__c.field-meta.xml
<CustomField>
    <fullName>Minimo_precio_inter_s__c</fullName>
    <label>Mínimo precio interés</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Minimo_precio_interes</valueSetName>
    </valueSet>
</CustomField>