force-app/main/default/objects/Lead/fields/Motivo_de_descarte__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_descarte__c</fullName>
    <label>Motivo de descarte</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Motivos_de_descarte</valueSetName>
    </valueSet>
</CustomField>