force-app/main/default/objects/Lead/fields/Nacionalidad__c.field-meta.xml
<CustomField>
    <fullName>Nacionalidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nacionalidad</label>
    <referenceTo>Pais__c</referenceTo>
    <relationshipLabel>Leads (Nacionalidad)</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>