force-app/main/default/objects/Lead/fields/Nombre_promocion_web_to_lead__c.field-meta.xml
<CustomField>
    <fullName>Nombre_promocion_web_to_lead__c</fullName>
    <label>Nombre promoción (web-to-lead)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>