force-app/main/default/objects/Lead/fields/Nombre_via__c.field-meta.xml
<CustomField>
    <fullName>Nombre_via__c</fullName>
    <label>Nombre vía</label>
    <length>255</length>
    <type>Text</type>
</CustomField>