force-app/main/default/objects/Lead/fields/Numero_de_atencion__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_atencion__c</fullName>
    <label>Número de atención</label>
    <type>Phone</type>
</CustomField>