force-app/main/default/objects/Lead/fields/Numero_de_documento__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_documento__c</fullName>
    <inlineHelpText>Si el candidato es empresa, será el número de documento de la empresa</inlineHelpText>
    <label>Número de documento</label>
    <length>25</length>
    <type>Text</type>
</CustomField>