force-app/main/default/objects/Lead/fields/Numero_piso__c.field-meta.xml
<CustomField>
    <fullName>Numero_piso__c</fullName>
    <label>Piso</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>