force-app/main/default/objects/Lead/fields/PrefDormFormulaHello__c.field-meta.xml
<CustomField>
    <fullName>PrefDormFormulaHello__c</fullName>
    <formula>IF ( INCLUDES ( Preferencia_Dormitorios__c , &quot;0&quot; ), &quot;0; &quot;,null ) &amp;
IF ( INCLUDES ( Preferencia_Dormitorios__c , &quot;1&quot; ), &quot;1; &quot;,null ) &amp;
IF ( INCLUDES ( Preferencia_Dormitorios__c , &quot;2&quot; ), &quot;2; &quot;,null ) &amp;
IF ( INCLUDES ( Preferencia_Dormitorios__c , &quot;3&quot; ), &quot;3; &quot;,null ) &amp;
IF ( INCLUDES ( Preferencia_Dormitorios__c , &quot;4&quot; ), &quot;4; &quot;,null ) &amp;
IF ( INCLUDES ( Preferencia_Dormitorios__c , &quot;5&quot; ), &quot;5; &quot;,null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preferencia Dormitorios Hello</label>
    <type>Text</type>
</CustomField>