force-app/main/default/objects/Lead/fields/PromocionPardot__c.field-meta.xml
<CustomField>
    <fullName>PromocionPardot__c</fullName>
    <formula>Promocion__r.Name</formula>
    <label>Promoción Pardot</label>
    <type>Text</type>
</CustomField>