force-app/main/default/objects/Lead/fields/Tipo_de_documento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_documento__c</fullName>
    <inlineHelpText>Si el candidato es empresa, será el tipo de documento de la empresa</inlineHelpText>
    <label>Tipo de documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_de_documento</valueSetName>
    </valueSet>
</CustomField>