force-app/main/default/objects/Lead/fields/Tipologia_interes__c.field-meta.xml
<CustomField>
    <fullName>Tipologia_interes__c</fullName>
    <label>Tipología de interés</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipolog_a_de_interes</valueSetName>
    </valueSet>
</CustomField>