force-app/main/default/objects/Lead/fields/Urbanizacion__c.field-meta.xml
<CustomField>
    <fullName>Urbanizacion__c</fullName>
    <label>Urbanización</label>
    <length>128</length>
    <type>Text</type>
</CustomField>