force-app/main/default/objects/Lead/validationRules/Comprobacion_campos_RBA.validationRule-meta.xml
<ValidationRule>
    <fullName>Comprobacion_campos_RBA</fullName>
    <active>false</active>
    <description>Comprueba si se ha rellenado al menos uno de los campos necesarios para el cálculo de RBA de AML.  Se añade la condición para que el process se ejecute al cambiar el comercial de una promoción.</description>
    <errorConditionFormula>AND(
    NOT(ISCHANGED( OwnerId )),
    ISPICKVAL(Status, &apos;Convertido&apos;),
    ISBLANK(CNAE__c),
    ISPICKVAL(Situacion_laboral__c, &apos;&apos;),
    ISBLANK(CNO__c)
)</errorConditionFormula>
    <errorMessage>Para realizar el cálculo de RBA en AML es necesario completar alguno de los siguientes campos: CNAE, CNO, Situación laboral.</errorMessage>
</ValidationRule>