force-app/main/default/objects/Lead/validationRules/Motivo_de_descarte_al_descartar_lead.validationRule-meta.xml
<ValidationRule>
    <fullName>Motivo_de_descarte_al_descartar_lead</fullName>
    <active>true</active>
    <description>Se añade la condición para que el process se ejecute al cambiar el comercial de una promoción.</description>
    <errorConditionFormula>AND(
    NOT(ISCHANGED( OwnerId )),
    ISPICKVAL(Status  , &quot;Descartado&quot;),
    ISBLANK(TEXT(  Motivo_de_descarte__c ))

)</errorConditionFormula>
    <errorDisplayField>Motivo_de_descarte__c</errorDisplayField>
    <errorMessage>Introduzca un Motivo de descarte</errorMessage>
</ValidationRule>