force-app/main/default/objects/Lead/validationRules/Movil_obligatorio_si_viene_de_caseta.validationRule-meta.xml
<ValidationRule>
    <fullName>Movil_obligatorio_si_viene_de_caseta</fullName>
    <active>true</active>
    <description>Si el origen del candidato es &quot;Caseta&quot;, pedir móvil obligatorio.
Se añade la condición para que el process se ejecute al cambiar el comercial de una promoción.</description>
    <errorConditionFormula>AND(
 NOT(ISCHANGED( OwnerId )),
 ISPICKVAL( LeadSource , &quot;Caseta&quot;) ,
 ISBLANK( MobilePhone ) 
)</errorConditionFormula>
    <errorMessage>Por favor, introduzca el Teléfono Móvil</errorMessage>
</ValidationRule>