force-app/main/default/objects/Lead/validationRules/Nacionalidad_obligatoria_al_convertir.validationRule-meta.xml
<ValidationRule>
    <fullName>Nacionalidad_obligatoria_al_convertir</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
IsConverted,
ISBLANK(  Nacionalidad__c )
  )</errorConditionFormula>
    <errorMessage>Antes de convertir el candidato, debe de rellenar la nacionalidad</errorMessage>
</ValidationRule>