force-app/main/default/objects/Lead/validationRules/PreventDashesSpacesSlashesInMobilePhone.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventDashesSpacesSlashesInMobilePhone</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
CONTAINS(MobilePhone , &quot;/&quot;),
CONTAINS(MobilePhone , &quot; &quot;),
CONTAINS(MobilePhone , &quot;-&quot;)
)</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>El teléfono no puede contener guiones(&quot;-&quot;), barras(&quot;/&quot;) o espacios en blanco.</errorMessage>
</ValidationRule>