force-app/main/default/objects/Lead/validationRules/PreventDashesSpacesSlashesInPhone.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventDashesSpacesSlashesInPhone</fullName>
    <active>true</active>
    <errorConditionFormula>OR( 
CONTAINS(Phone , &quot;/&quot;), 
CONTAINS(Phone , &quot; &quot;), 
CONTAINS(Phone , &quot;-&quot;) 
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>El teléfono no puede contener guiones(&quot;-&quot;), barras(&quot;/&quot;) o espacios en blanco.</errorMessage>
</ValidationRule>