force-app/main/default/objects/Lead/validationRules/Promocion_obligatoria_al_convertir.validationRule-meta.xml
<ValidationRule>
    <fullName>Promocion_obligatoria_al_convertir</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
IsConverted,
ISNULL(Promocion__c)
)</errorConditionFormula>
    <errorDisplayField>Promocion__c</errorDisplayField>
    <errorMessage>Antes de convertir el candidato, debe de rellenar la Promoción asociada</errorMessage>
</ValidationRule>