force-app/main/default/objects/Lead/validationRules/Situacionlaboral_oblgatoria_al_convertir.validationRule-meta.xml
<ValidationRule>
    <fullName>Situacionlaboral_oblgatoria_al_convertir</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
IsConverted,
ISPICKVAL(Situacion_laboral__c, &quot;&quot;)
)</errorConditionFormula>
    <errorMessage>Antes de convertir el candidato, debe de rellenar la situación laboral</errorMessage>
</ValidationRule>