force-app/main/default/objects/Lead/listViews/Candidatos_AvintiaMare.listView-meta.xml
<ListView>
    <fullName>Candidatos_AvintiaMare</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Medio_de_conocimiento__c</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Motivo_de_descarte__c</columns>
    <columns>Descripcion_motivo_de_descarte__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Nombre_promocion_web_to_lead__c</columns>
    <filterScope>Everything</filterScope>
    <label>Candidatos_AvintiaMare</label>
</ListView>