force-app/main/default/objects/Lead/listViews/Control_candidatos.listView-meta.xml
<ListView>
    <fullName>Control_candidatos</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Medio_de_conocimiento__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>12/31/2022 12:00 AM</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Lead</value>
    </filters>
    <label>Control candidatos</label>
    <sharedTo>
        <role>Subdirector</role>
    </sharedTo>
</ListView>