force-app/main/default/objects/Lead/listViews/Leads_Avintia_Mare1.listView-meta.xml
<ListView>
    <fullName>Leads_Avintia_Mare1</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Motivo_de_descarte__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Promocion__c</field>
        <operation>contains</operation>
        <value>mare</value>
    </filters>
    <label>Leads Avintia Mare</label>
</ListView>