force-app/main/default/objects/Lead/listViews/LEED_Gijon.listView-meta.xml
<ListView>
    <fullName>LEED_Gijon</fullName>
    <columns>Numero_de_atencion__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Promocion__c</field>
        <operation>equals</operation>
        <value>GIJON100</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Lead</value>
    </filters>
    <label>LEED_Gijon</label>
</ListView>